added oil spills

--- a/index.html
+++ b/index.html
@@ -68,22 +68,24 @@
 		<div id="buttons">
 			<div id="sidebar">
 				<ul>
-					<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfz7fphZ-EqgobxyvgmFGjCr-Qy5Jfu7pANRnjw_6SuDnQaYA/viewform"><button>Give Feedback</button></a></li>
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
-					<li><h6>RECENT</h6>
+					<li><button><h6>LISTS</h6></button>
 					<ul id="recent_sub">
 						<li><button class="button_seven"><h6><em>Conflicts Feed</em></h6></button></li>
 						<li><button class="button_four"><h6><em>Heads of State</em></h6></button></li>
 						<li><button class="button_five"><h6><em>Notable Deaths</em></h6></button></li>
 						<li><button class="button_three"><h6><em>Terrorist Attacks</em></h6></button></li>
 						<li><button class="button_six last_submenu_item"><h6><em>Natural Disasters</em></h6></button></li>
-					</ul></li>				
+					<!-- </ul></li>				
 					<li><h6>ONGOING</h6>
-					<ul id="ongoing_sub">
+					<ul id="ongoing_sub"> -->
+						<li><button class="spills_button"><h6><em>Oil Spills</em></h6></button></li>
 						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
 						<li><button class="button_two" class="last_submenu_item"><h6><em>Conflicts</em></h6></button></li>
 					</ul></li>
-					<button class="about_button"><h6><em>About</em></h6></button>
+					<li><button class="about_button"><h6><em>About</em></h6></button></li>
+					<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfz7fphZ-EqgobxyvgmFGjCr-Qy5Jfu7pANRnjw_6SuDnQaYA/viewform"><button>Give Feedback</button></a></li>
+
 				</ul>
 			</div>
 		</div>
@@ -138,6 +140,8 @@
 		<div id="notable_deaths" class="inner"><h5>Public Figures Who Have Died in the Past Three Days</h5></div>
 
 		<div id="natural_disasters" class="inner"><h5>Natural disaster alerts in the past week</h5></div>
+
+		<div id="ongoing_oil_spills" class="inner"><h5>Ongoing Oil Spills</h5></div>
 
 	</div>
 
