--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<!-- </ul></li>				
 					<li><h6>ONGOING</h6>
 					<ul id="ongoing_sub"> -->
+						<li><button class="wrecks_button"><h6><em>Shipwrecks</em></h6></button></li>
 						<li><button class="spills_button"><h6><em>Oil Spills</em></h6></button></li>
 						<li><button class="button_one"><h6><em>Protests</em></h6></button></li>
 						<li><button class="button_two" class="last_submenu_item"><h6><em>Conflicts</em></h6></button></li>
@@ -133,15 +134,17 @@
 		<div id="terrorist_attacks" class="inner"><h5>Terrorist Attacks in the Past Week</h5></div>
 		<div id="terrorist_attacks_2" class="inner"></div>
 
-		<div id="conflict_updates" class="inner"><h5>Recent updates from conflict-news.com</h5></div>
+		<div id="conflict_updates" class="inner"><h5>Recent Updates from conflict-news.com</h5></div>
 
 		<div id="new_heads" class="inner"><h5>New Heads of State This Year</h5></div>
 
 		<div id="notable_deaths" class="inner"><h5>Public Figures Who Have Died in the Past Three Days</h5></div>
 
-		<div id="natural_disasters" class="inner"><h5>Natural disaster alerts in the past week</h5></div>
+		<div id="natural_disasters" class="inner"><h5>Natural Disaster Alerts in the Past Week</h5></div>
 
 		<div id="ongoing_oil_spills" class="inner"><h5>Ongoing Oil Spills</h5></div>
+
+		<div id="recent_shipwrecks" class="inner"><h5>Shipwrecks This Year</h5></div>
 
 	</div>
 
