added ad verification meta

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+<meta name="exoclick-site-verification" content="3043f70b3f4117f0b3f489aabc844b99">
  <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
