--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</header>
 
 
-		<div id="buttons-mobile">
+		<div id="buttons-mobile" style="display: none;">
 			<div class="navbar">
 				<ul class="navbar">
 					<li><button class="button_zero"><h6>Daily</h6></button></li>
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 
-		<div id="buttons">
+		<div id="buttons" style="display: none;">
 			<div id="sidebar">
 				<ul>
 					<li><button class="button_zero"><h6><em>Daily Brief</h6></em></button></li>
